# Invoice-Processing-Workflow

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  demo.db  pyproject.toml  requirements.txt  run_atlas.py  run_common.py  run_servers.py  test_mcp.py
backend/config/: sample_invoice.json
backend/demo/: __init__.py  run_demo.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  approval_agent.py  base.py  checkpoint_agent.py  complete_agent.py  erp_fetch_agent.py  human_review_agent.py  ingest_agent.py  matcher_agent.py  normalize_agent.py  notify_agent.py  ocr_nlp_agent.py  posting_agent.py  reconcile_agent.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/routes/: __init__.py  events.py  health.py  (+3 more)
backend/src/config/: __init__.py  settings.py  workflow_config.py
backend/src/db/: __init__.py  checkpoint_store.py  models.py  session.py
backend/src/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
backend/src/mcp/: __init__.py  atlas_server.py  client.py  common_server.py
backend/src/schemas/: __init__.py  invoice.py  response.py  review.py
backend/src/services/: __init__.py  event_emitter.py  llm_service.py
backend/src/tools/: __init__.py  bigtool_picker.py  mcp_router.py
backend/src/utils/: __init__.py  logger.py  retry.py  validators.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_ingest_agent.py  test_matcher_agent.py
backend/tests/test_graph/: test_workflow.py
backend/tests/test_tools/: __init__.py  test_bigtool.py  test_mcp_router.py
(+22 files in other folders)
